fix(list): fix title align

--- a/styles/lista/lista.module.scss
+++ b/styles/lista/lista.module.scss
@@ -27,6 +27,7 @@ $light-color: #ffceb4;
   .title {
     font-size: 48px;
     padding: 0.5rem 0;
+    text-align: center;
   }
 
   .itens {
